# Flexor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake-single-platform.yml
demo/: CMakeLists.txt
demo/src/: demo.cpp  demo.h  main.cpp
lib/: CMakeLists.txt
lib/include/: engine.h
lib/include/math/: base.h  matrix.h  quaternion.h  small_matrix.h  solver.h  trig.h  vector.h  vector2.h  vector3.h  vector4.h
lib/src/: engine.cpp
tests/: CMakeLists.txt
tests/math/: matrix.cpp  quaternion.cpp  solver.cpp  vector.cpp
